--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,15 @@
 <body>
   <app-root></app-root>
   <script src='https://meet.jit.si/external_api.js'></script>
+  <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+  <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+  <df-messenger
+    intent="WELCOME"
+    chat-title="BotSW-II"
+    agent-id="54f95916-91d9-4317-a40e-4feaf8ad121f"
+    language-code="es"
+    wait-open= true
+    chat-icon="https://e7.pngegg.com/pngimages/294/426/png-clipart-chatbot-internet-bot-artificial-intelligence-e-commerce-robot-electronics-text.png"
+  ></df-messenger>
 </body>
 </html>
